Updated Lecture 3 Participation

--- a/navigating_github.html
+++ b/navigating_github.html
@@ -365,16 +365,18 @@ summary {
 </div>
 
 
-<p>Here is the URL to the STAT5454 homepage Repo:</p>
-<p><a href="https://github.com/STAT545-UBC/STAT545-home" class="uri">https://github.com/STAT545-UBC/STAT545-home</a></p>
-<p>Here is the organization account:</p>
-<p><a href="https://github.com/STAT545-UBC" class="uri">https://github.com/STAT545-UBC</a></p>
-<p>URL for my STAT545 Participation Repo:</p>
-<p><a href="https://github.com/LindaD95/STAT545-participation" class="uri">https://github.com/LindaD95/STAT545-participation</a></p>
-<p>Here is my user account URL</p>
-<p><a href="https://github.com/LindaD95" class="uri">https://github.com/LindaD95</a></p>
-<p><em>I missed this class</em> <strong>OPPS my bad</strong> but sometimes technology screws you over</p>
-<p>Some of my favourite things * Coffee * Hiking * Skiing</p>
+<div id="lecture-3-authoring" class="section level2">
+<h2><strong>Lecture 3:</strong> Authoring</h2>
+<p>Here are some pertinent URLS:</p>
+<p><a href="https://github.com/STAT545-UBC">Organization Account</a><br />
+<a href="https://github.com/LindaD95">User account</a><br />
+<a href="https://github.com/LindaD95/STAT545-participation">Participation Repo</a><br />
+<a href="https://github.com/STAT545-UBC/STAT545-home">STAT5454 homepage Repo</a><br />
+</p>
+<p><em>I missed this class</em> <strong>OPPS my bad</strong> but sometimes technology screws you over (ie may laptop decided that it was going to die today!)</p>
+<p>Some of my favourite things:<br />
+* Coffee * Hiking * Skiing</p>
+</div>
 
 
 
